--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="backgroundChanger">Change Background</button>
     <script src="js.js"></script>
 </body>
 </html>
